explore the training data

--- a/src/data_exploration.ipynb
+++ b/src/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dfc2ccb2-4560-440d-838b-bb4938ba0472",
    "metadata": {},
    "outputs": [
@@ -214,12 +214,13 @@
     "raw_test_data = pd.read_csv('../dataset/mnist_test.csv')\n",
     "raw_training_data = pd.read_csv('../dataset/mnist_train.csv')\n",
     "\n",
-    "raw_test_data.head()"
+    "raw_test_data.head()\n",
+    "raw_training_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6ccc73fc-2d80-4785-91ab-8b655aa25bde",
    "metadata": {},
    "outputs": [
@@ -417,8 +418,19 @@
     }
    ],
    "source": [
-    "rtdt = raw_test_data.transpose()\n",
-    "rtdt.head()"
+    "test_transpose = raw_test_data.transpose()\n",
+    "test_transpose.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9473406a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_transpose = raw_training_data.transpose()\n",
+    "training_transpose.head()"
    ]
   },
   {
