explore using np.random.rand

--- a/src/data_exploration.ipynb
+++ b/src/data_exploration.ipynb
@@ -209,6 +209,7 @@
     "# label (what the number actually is) then i*j where j itterates before i (how do I write that again?)\n",
     "# each row is 785 values with the first being the label\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "raw_test_data = pd.read_csv('../dataset/mnist_test.csv')\n",
@@ -879,11 +880,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f80287c-159a-49b3-ae74-ba8498005d4f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.57521974e-04, 9.16506117e-01, 1.92234204e-01, ...,\n",
+       "        1.16797221e-01, 4.49597350e-01, 2.91570924e-01],\n",
+       "       [6.56829118e-01, 9.10247998e-01, 8.03525943e-02, ...,\n",
+       "        8.23436660e-01, 2.81132338e-01, 7.91037545e-01],\n",
+       "       [3.10146620e-02, 4.13763338e-01, 5.91619277e-01, ...,\n",
+       "        3.60533416e-01, 6.83808821e-01, 7.97377249e-01],\n",
+       "       ...,\n",
+       "       [3.78604964e-01, 8.62865434e-01, 6.31515431e-01, ...,\n",
+       "        7.82541383e-01, 2.35724592e-01, 4.53157460e-01],\n",
+       "       [8.57924043e-02, 8.65656472e-01, 5.60334553e-01, ...,\n",
+       "        9.71071091e-01, 6.63797465e-01, 2.64800456e-02],\n",
+       "       [7.54799033e-01, 5.06671042e-01, 9.93608063e-01, ...,\n",
+       "        5.08054296e-01, 3.58707816e-01, 8.44383247e-01]],\n",
+       "      shape=(60000, 785))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.rand(*(raw_training_data.shape))"
+   ]
   }
  ],
  "metadata": {
